# rplc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/rplc_cli/: Cargo.toml
crates/rplc_cli/src/: main.rs
crates/rplc_core/: Cargo.toml
crates/rplc_core/src/: config.rs  diagnostics.rs  generator.rs  lib.rs  validator.rs
crates/rplc_wasm/: Cargo.toml
crates/rplc_wasm/src/: lib.rs
doc/: schema.md
