[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["WindWeaver <moonbite233@gmail.com>"]
license = "ICS"
repository = "https://github.com/RoboMaster-DLMU-CONE/rplc"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
json-spanned-value = "0"
miette = { version = "7", features = ["derive", "fancy"] }

clap = { version = "4.5", features = ["derive"] }
anyhow = "1"

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0"
console_error_panic_hook = "0"
