[package]
name = "rplc_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
json-spanned-value.workspace = true
miette.workspace = true
regex.workspace = true
