[package]
name = "rplc_wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
[lib]
crate-type = ["cdylib"]

[dependencies]
rplc_core = { path = "../rplc_core/" }

serde.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
